2012-12-15  Alexey Proskuryakov  <ap@apple.com>

        Build fix.

        * platform/network/FormData.cpp:
        (WebCore::encodeElement):
        (WebCore::decodeElement):
        (WebCore::FormData::encode):
        (WebCore::FormData::decode):
        Disambiguated encode/decode functions. I'm not quite sure why the compiler was
        confused, but distinct names should make the code more readable anyway.

2012-12-15  Alexey Proskuryakov  <ap@apple.com>

        <rdar://problem/12886312> Cannot upload patches to Bugzilla (<input type=file> doesn't work)
        https://bugs.webkit.org/show_bug.cgi?id=105120

        Reviewed by Sam Weinig.

        * WebCore.exp.in:
        * history/HistoryItem.cpp:
        * platform/network/FormData.h:
        Renamed encodeForBackForward and decodeForBackForward to encode and decode, respectively.
        I couldn't find anything in these that would limit them to this use, and data encoded
        for b/f has to be good enough to re-create a request anyway.

        * platform/network/FormData.cpp: (WebCore::decode): Fixed file data decoder to not
        bail out in the general case of posting a complete file.

2012-12-15  Nima Ghanavatian  <nghanavatian@rim.com>

        [BlackBerry] Pass key modifiers with touch and mouse events
        https://bugs.webkit.org/show_bug.cgi?id=105108

        Reviewed by Rob Buis.

        Call Screen to retrieve current key modifiers.

        Internally reviewed by Gen Mak.

        * platform/PlatformMouseEvent.h:
        (PlatformMouseEvent):
        * platform/blackberry/PlatformKeyboardEventBlackBerry.cpp:
        (WebCore::PlatformKeyboardEvent::getCurrentModifierState):
        * platform/blackberry/PlatformMouseEventBlackBerry.cpp:
        (WebCore::PlatformMouseEvent::PlatformMouseEvent):
        * platform/blackberry/PlatformTouchEventBlackBerry.cpp:
        (WebCore::PlatformTouchEvent::PlatformTouchEvent):

2012-12-15  Otto Derek Cheung  <otcheung@rim.com>
