@@ -1,3 +1,12 @@
+2012-12-15  Carlos Garcia Campos  <cgarcia@igalia.com>
+
+        Unreviewed. Fix make distcheck.
+
+        * bindings/gobject/GNUmakefile.am: Do not dist generated DOM
+        bindings headers.
+        * platform/ScrollAnimatorNone.cpp: Include PlatformGestureEvent.h
+        only if gesture events are enabled.
+
 2012-12-15  Alexey Proskuryakov  <ap@apple.com>
 
         Build fix.
